@@ -513,23 +513,26 @@ argument_list|()
 decl_stmt|;
 name|passage
 operator|.
-name|score
-operator|=
+name|setScore
+argument_list|(
 name|Float
 operator|.
 name|NaN
+argument_list|)
 expr_stmt|;
 name|passage
 operator|.
-name|startOffset
-operator|=
+name|setStartOffset
+argument_list|(
 name|pos
+argument_list|)
 expr_stmt|;
 name|passage
 operator|.
-name|endOffset
-operator|=
+name|setEndOffset
+argument_list|(
 name|next
+argument_list|)
 expr_stmt|;
 name|passages
 operator|.
@@ -705,11 +708,13 @@ if|if
 condition|(
 name|left
 operator|.
-name|score
+name|getScore
+argument_list|()
 operator|<
 name|right
 operator|.
-name|score
+name|getScore
+argument_list|()
 condition|)
 block|{
 return|return
@@ -722,11 +727,13 @@ if|if
 condition|(
 name|left
 operator|.
-name|score
+name|getScore
+argument_list|()
 operator|>
 name|right
 operator|.
-name|score
+name|getScore
+argument_list|()
 condition|)
 block|{
 return|return
@@ -738,11 +745,13 @@ block|{
 return|return
 name|left
 operator|.
-name|startOffset
+name|getStartOffset
+argument_list|()
 operator|-
 name|right
 operator|.
-name|startOffset
+name|getStartOffset
+argument_list|()
 return|;
 block|}
 block|}
@@ -842,14 +851,16 @@ name|start
 operator|>=
 name|passage
 operator|.
-name|endOffset
+name|getEndOffset
+argument_list|()
 condition|)
 block|{
 if|if
 condition|(
 name|passage
 operator|.
-name|startOffset
+name|getStartOffset
+argument_list|()
 operator|>=
 literal|0
 condition|)
@@ -858,15 +869,22 @@ comment|// true if this passage has terms; otherwise couldn't find any (yet)
 comment|// finalize passage
 name|passage
 operator|.
-name|score
-operator|*=
+name|setScore
+argument_list|(
+name|passage
+operator|.
+name|getScore
+argument_list|()
+operator|*
 name|scorer
 operator|.
 name|norm
 argument_list|(
 name|passage
 operator|.
-name|startOffset
+name|getStartOffset
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// new sentence: first add 'passage' to queue
@@ -881,14 +899,16 @@ name|maxPassages
 operator|&&
 name|passage
 operator|.
-name|score
+name|getScore
+argument_list|()
 operator|<
 name|passageQueue
 operator|.
 name|peek
 argument_list|()
 operator|.
-name|score
+name|getScore
+argument_list|()
 condition|)
 block|{
 name|passage
@@ -954,8 +974,8 @@ block|}
 comment|// advance breakIterator
 name|passage
 operator|.
-name|startOffset
-operator|=
+name|setStartOffset
+argument_list|(
 name|Math
 operator|.
 name|max
@@ -971,11 +991,12 @@ argument_list|)
 argument_list|,
 literal|0
 argument_list|)
+argument_list|)
 expr_stmt|;
 name|passage
 operator|.
-name|endOffset
-operator|=
+name|setEndOffset
+argument_list|(
 name|Math
 operator|.
 name|min
@@ -988,6 +1009,7 @@ name|start
 argument_list|)
 argument_list|,
 name|contentLength
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -1068,7 +1090,8 @@ name|start
 operator|>=
 name|passage
 operator|.
-name|endOffset
+name|getEndOffset
+argument_list|()
 operator|||
 name|end
 operator|>
@@ -1088,8 +1111,13 @@ block|}
 block|}
 name|passage
 operator|.
-name|score
-operator|+=
+name|setScore
+argument_list|(
+name|passage
+operator|.
+name|getScore
+argument_list|()
+operator|+
 name|off
 operator|.
 name|weight
@@ -1102,11 +1130,14 @@ name|tf
 argument_list|,
 name|passage
 operator|.
-name|endOffset
+name|getEndOffset
+argument_list|()
 operator|-
 name|passage
 operator|.
-name|startOffset
+name|getStartOffset
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -1157,11 +1188,13 @@ parameter_list|)
 lambda|->
 name|left
 operator|.
-name|startOffset
+name|getStartOffset
+argument_list|()
 operator|-
 name|right
 operator|.
-name|startOffset
+name|getStartOffset
+argument_list|()
 argument_list|)
 expr_stmt|;
 return|return
