@@ -5434,7 +5434,8 @@ if|if
 condition|(
 name|passage
 operator|.
-name|startOffset
+name|getStartOffset
+argument_list|()
 operator|>
 name|pos
 operator|&&
@@ -5455,7 +5456,8 @@ name|pos
 operator|=
 name|passage
 operator|.
-name|startOffset
+name|getStartOffset
+argument_list|()
 expr_stmt|;
 for|for
 control|(
@@ -5468,7 +5470,8 @@ name|i
 operator|<
 name|passage
 operator|.
-name|numMatches
+name|getNumMatches
+argument_list|()
 condition|;
 name|i
 operator|++
@@ -5479,7 +5482,8 @@ name|start
 init|=
 name|passage
 operator|.
-name|matchStarts
+name|getMatchStarts
+argument_list|()
 index|[
 name|i
 index|]
@@ -5489,7 +5493,8 @@ name|end
 init|=
 name|passage
 operator|.
-name|matchEnds
+name|getMatchEnds
+argument_list|()
 index|[
 name|i
 index|]
@@ -5606,7 +5611,8 @@ name|pos
 argument_list|,
 name|passage
 operator|.
-name|endOffset
+name|getEndOffset
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -5614,7 +5620,8 @@ name|pos
 operator|=
 name|passage
 operator|.
-name|endOffset
+name|getEndOffset
+argument_list|()
 expr_stmt|;
 block|}
 return|return
